# onvif-rtsp-bridge

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: config.yaml
onvif_rtsp_bridge/: discovery.py  main.py  onvif_server.py  rtsp_proxy.py
onvif_rtsp_bridge/services/: __init__.py  device_service.py  events_service.py  media_service.py
onvif_rtsp_bridge/utils/: __init__.py  logging_config.py  soap_utils.py
src/: __init__.py  config.py  discovery.py  main.py  onvif_server.py  rtsp_proxy.py
src/services/: __init__.py  device_service.py  events_service.py  media_service.py
src/utils/: __init__.py  soap_utils.py
